api/deployment-web-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-front
  namespace: api
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 5
  selector:
    matchLabels:
      app: web-front
  template:
    metadata:
      labels:
        app: web-front
        tier: web
        version: "1.0"
        release: production
    spec:
      nodeSelector:
        cloud.google.com/compute-class: "Scale-Out"
      securityContext:
        fsGroup: 101 # use the nginx group for file-system security privileges
      terminationGracePeriodSeconds: 60
      serviceAccountName: api
      containers:
        - name: nginx
          image: us-central1-docker.pkg.dev/controlnet-407314/gke-us-central1-images/mythica-web-front:latest
          args: [ "nginx-debug", "-c", "/etc/nginx/nginx-gke.conf" ]
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
          volumeMounts:
            - name: ephemeral-web-content
              mountPath: /sites
      volumes:
        # Nodal ephemeral volume used by the CSI driver
        - name: ephemeral-web-content
          emptyDir: { }
      restartPolicy: Always
