api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: api
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 5
  selector:
    matchLabels:
      app: api-v1
  template:
    metadata:
      labels:
        app: api-v1
    spec:
      nodeSelector:
        cloud.google.com/compute-class: "Scale-Out"
      securityContext:
        fsGroup: 101 # use the nginx group for file-system security privileges
      terminationGracePeriodSeconds: 60
      serviceAccountName: api
      containers:
        - name: nginx
          image: us-central1-docker.pkg.dev/controlnet-407314/gke-us-central1-images/mythica-web-front:latest
          command: [ "nginx" ]
          args: [ "-g", "daemon off;", "-c", "/etc/nginx/nginx-gke.conf" ]
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
          volumeMounts:
            - name: ephemeral-web-content
              mountPath: /sites
        - name: app
          image: us-central1-docker.pkg.dev/controlnet-407314/gke-us-central1-images/mythica-app:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: ephemeral-upload-content
              mountPath: /uploads
              readOnly: false
      volumes:
        # Nodal ephemeral volume used by the CSI driver
        - name: ephemeral-web-content
          emptyDir: { }
        - name: ephemeral-upload-content
          emptyDir: { }
      restartPolicy: Always
