api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-v1
  namespace: api
  labels:
    app: api
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: api-v1
