api/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: api
  namespace: api
  labels:
    exposed: "true"
spec:
  parentRefs:
  - kind: Gateway
    namespace: ingress
    name: external-gateway
  hostnames:
  - "api.mythica.ai"
  rules:
  - matches:
    - path:
        value: /v1
    backendRefs:
    - name: api-v1
      port: 80
